# frostbyte_3ds

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  DEVELOPMENT.md  DevkitArm3DS.cmake  Makefile  README.md  todo.txt
.zed/: settings.json  tasks.json
cmake/: FindCITRO2D.cmake  Tools3DS.cmake
gfx/: sprites.t3s
res/: frostbyte_3ds.rsf
src/: main.cpp  sprites.hpp
src/engine/core/: Engine.cpp  Engine.hpp
src/engine/graphics/: Renderer.cpp  Renderer.hpp
src/engine/input/: InputManager.hpp
src/engine/math/: Math.hpp  Rect.hpp
src/engine/physics/: AABB.hpp  Collision.hpp
src/engine/util/: Logger.hpp
src/game/: Game.cpp  Game.hpp  constants.hpp
src/game/data/: GameData.hpp  LevelData.hpp  LevelRegistry.hpp  _Level.hpp
src/game/entities/: Block.cpp  Block.hpp  Player.cpp  Player.hpp  Snowflake.cpp  Snowflake.hpp
src/game/entities/effects/: DieEffect.cpp  DieEffect.hpp
src/game/screens/: LevelScreen.cpp  LevelScreen.hpp  MainMenuScreen.cpp  MainMenuScreen.hpp
src/game/states/: GameState.hpp  Screen.hpp
